Fix viewport on mobile

--- a/cards/main.css
+++ b/cards/main.css
@@ -12,14 +12,9 @@ html, body {
 }
 
 body {
-	min-height: 100vh;
-	/* mobile viewport bug fix */
-	min-height: -webkit-fill-available;
-  }
-
-  html {
-	height: -webkit-fill-available;
-  }
+	height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+	height: calc(var(--vh, 1vh) * 100);
+}
 
 .flex-container {
 	display: flex;
